segundo commit del ex

--- a/nivel1/ex01.html
+++ b/nivel1/ex01.html
@@ -8,7 +8,7 @@
 			<div id ="cabecera">
                 <div id="columna1">Columna 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dignissim odio nibh, sed pellentesque sapien accumsan eu.</div>
                 <div id="columna2">Columna 2 Praesent pulvinar ultricies mauris non rhoncus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent 
-                ac purus enim. Praesent efficitur quis enim vel tempor. Duis velit leo, tempus eu sagittis eget, efficitur vulputate nisi. </div>
+                    Praesent efficitur quis enim vel tempor. Duis velit leo, tempus eu sagittis eget, efficitur vulputate nisi. </div>
                 <div id="columna3">Columna 3 Aenean ut lacus in ante tempus pulvinar. Duis tempor sem eget libero dapibus, vitae placerat erat mollis</div>
                 
                              
