Hecho con flex estrictamente. Falta poner al 100 el 3er container

--- a/nivel1/miercoles16/index.html
+++ b/nivel1/miercoles16/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Primer Ejercicio (1)</title>
-    <link rel="stylesheet" href="estilo.css" type="text/css" />
+    <link rel="stylesheet" href="estilos.css" type="text/css" />
   </head>
   <body>
     <!--contenedor padre-->
     <div class="contenedor">
       <!--contenedores hijos-->
       <div class="elemento elemento1">
-        111
+        1
         <div class="hijito">Hijito 🍼</div>
       </div>
-      <div class="elemento elemento2">222</div>
-      <div class="elemento elemento3">333</div>
-      <div class="elemento elemento4">444</div>
-      <div class="elemento elemento5">555</div>
+      <div class="elemento elemento2">2</div>
+      <div class="elemento elemento3">3</div>
+      <div class="elemento elemento4">4</div>
+      <div class="elemento elemento5">5</div>
     </div>
   </body>
 </html>
