--- a/nivel1/exercici1/pagina1.html
+++ b/nivel1/exercici1/pagina1.html
@@ -11,9 +11,9 @@
     <div class="padre">
       <header class="header">
         <div class="menu">
-          <div class="logo">logo</div>
-          <div class="nav">nav</div>
-          <div class="social">social</div>
+          <div class="logo">logo cabecera</div>
+          <div class="nav">nav cabecera</div>
+          <div class="social">social cabecera</div>
         </div>
         <div class="texto-principal">
           <h1>Texto principal</h1>
@@ -21,15 +21,15 @@
       </header>
       <section class="section">
           <div class="articulos">
-              <article class="article">articulo</article>
-              <article class="article">articulo</article>
-              <article class="article">articulo</article>
-              <article class="article">articulo</article>
-              <nav class="navegacion"></nav>
+              <article class="article">Primer Articulo</article>
+              <article class="article">Segundo Articulo</article>
+              <article class="article">Tercer Articulo</article>
+              <article class="article">Cuarto Articulo</article>
+              <nav class="navegacion">navegacion paginas</nav>
           </div>
           <aside class="aside">
-              <div class="publicidad">publicidad</div>
-              <div class="publicidad">publicidad</div>
+              <div class="publicidad">texto costado 2</div>
+              <div class="publicidad">texto costado 2</div>
           </aside>
       </section>
       <footer class="footer">
