Ejercicio 1 final para presentar

--- a/nivel1/exercici1/pagina1.html
+++ b/nivel1/exercici1/pagina1.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="estilopag1.css" />
   </head>
   <body>
-    <div class="padre">
+    <div class="container">
       <header class="header">
-        <div class="menu">
+        <div class="menuprincipal">
           <div class="logo">logo cabecera</div>
           <div class="nav">nav cabecera</div>
           <div class="social">social cabecera</div>
@@ -28,12 +28,12 @@
               <nav class="navegacion">navegacion paginas</nav>
           </div>
           <aside class="aside">
-              <div class="publicidad">texto costado 2</div>
-              <div class="publicidad">texto costado 2</div>
+              <div class="texto-aside">texto costado 2</div>
+              <div class="texto-aside">texto costado 2</div>
           </aside>
       </section>
       <footer class="footer">
-          <div class="pie">pie</div>
+          <div class="pie-pagina">pie de pagina</div>
       </footer>
     </div>
   </body>
