--- a/nivel1/exercici1/index1200.html
+++ b/nivel1/exercici1/index1200.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercici 1</title>
-    <link rel="stylesheet" href="estilopag1.css" />
+    <link rel="stylesheet" href="estilo1200.css" />
   </head>
   <body>
     <div class="container">
