--- a/nivel2/index.html
+++ b/nivel2/index.html
@@ -5,50 +5,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercici 3 Version Movil</title>
-    <link href="fontawesome-free-6.1.0-web/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link href="fontawesome-free-6.1.0-web/css/all.min.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="estilo.css" />
   </head>
   <body>
     <div class="container">
       <header class="header">
         <div class="menuprincipal">
-          <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo de la empresa"></a>
-          
+          <div class="logo">
+            <a href="index.html"
+              ><img src="images/logo.png" alt="logo de la empresa"
+            /></a>
           </div>
           <div class="nav">
             <a href="#"><i class="fa-solid fa-house"></i> Inicio </a>
             <a href="#"><i class="fa-solid fa-map-location-dot"></i> Rutas </a>
             <a href="#"><i class="fa-solid fa-hotel"></i> Hostales</a>
             <a href="#"><i class="fa-solid fa-plane"></i> Vuelos</a>
-            <a href="#"><i class="fa-solid fa-envelope-open-text"></i>Contacto</a>
-
+            <a href="#"
+              ><i class="fa-solid fa-envelope-open-text"></i>Contacto</a
+            >
           </div>
           <div class="social">
-            <div><a href="#"> <i class="fa-brands fa-facebook-square"></i> </a></div>
-            <div><a href="#"> <i class="fa-brands fa-twitter-square"></i> </a></div>
-              
+            <div>
+              <a href="#"> <i class="fa-brands fa-facebook-square"></i> </a>
+            </div>
+            <div>
+              <a href="#"> <i class="fa-brands fa-twitter-square"></i> </a>
+            </div>
           </div>
         </div>
         <div class="texto-principal">
-          <h1>Texto principal</h1>
+          <h1>"Disfruta de la experiencia de otros viajeros"</h1>
         </div>
       </header>
       <section class="section">
-          <div class="articulos">
-              <article class="article">Primer Articulo</article>
-              <article class="article">Segundo Articulo</article>
-              <article class="article">Tercer Articulo</article>
-              <article class="article">Cuarto Articulo</article>
-              <nav class="navegacion">navegacion paginas</nav>
-          </div>
-          <aside class="aside">
-              <div class="texto-aside">texto costado 2</div>
-              <div class="texto-aside">texto costado 2</div>
-          </aside>
+        <div class="articulos">
+          <article class="article">
+            <img src="../nivel2/images/sakura.jpg" />
+            <h3>3 de mayo 2021</h3>
+            <h2>Cultura</h2>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia, looked up one of
+              the more obscure Latin words, consectetur, from a Lorem Ipsum
+              passage, and going through the cites of the word in classical
+              literature, discovered the undoubtable source. Lorem Ipsum comes
+              from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
+              Malorum" (The Extremes of Good and Evil) by Cicero, written in 45
+              BC. This book is a treatise on the theory of ethics, very popular
+              during the Renaissance. The first line of Lorem Ipsum, "Lorem
+              ipsum dolor sit amet..", comes from a line in section 1.10.32.
+            </p>
+          </article>
+          <article class="article">
+            <img src="../nivel2/images/comida.jpg" />
+            <h3>1 de mayo 2021</h3>
+            <h2>Gastronomia</h2>
+            <p>
+              t is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout. The
+              point of using Lorem Ipsum is that it has a more-or-less normal
+              distribution of letters, as opposed to using 'Content here,
+              content here', making it look like readable English. Many desktop
+              publishing packages and web page editors now use Lorem Ipsum as
+              their default model text, and a search for 'lorem ipsum' will
+              uncover many web sites still in their infancy. Various versions
+              have evolved over the years, sometimes by accident, sometimes on
+              purpose (injected humour and the like).
+            </p>
+          </article>
+          <article class="article">
+            <img src="../nivel2/images/fuji.jpg" />
+            <h3>22 de abril 2021</h3>
+            <h2>Turismo</h2>
+            <p>
+              Lorem Ipsum has been the industry's standard dummy text ever since
+              the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not
+              only five centuries, but also the leap into electronic
+              typesetting, remaining essentially unchanged. It was popularised
+              in the 1960s with the release of Letraset sheets containing Lorem
+              Ipsum passages, and more recently with desktop publishing software
+              like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+          </article>
+          <article class="article">
+            <img src="../nivel2/images/noche.jpg" />
+            <h3>30 de marzo 2021</h3>
+            <h2>Vida nocturna</h2>
+            <p>
+              he standard chunk of Lorem Ipsum used since the 1500s is
+              reproduced below for those interested. Sections 1.10.32 and
+              1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also
+              reproduced in their exact original form, accompanied by English
+              versions from the 1914 translation by H. Rackham.
+            </p>
+          </article>
+          <p class="navegacion">
+            <p>Comes from sections 1.10.32 and 1.10.33 of "de Finibus
+            Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
+            written in 45 BC. This book is a treatise on the theory of ethics,
+            very popular during the Renaissance.</p>
+          </nav>
+        </div>
+        <aside class="aside">
+          <div class="texto-aside"><h4>Something</h4></div>
+          <div class="texto-aside"><h4>Nullam tempor lorem sit amet quam porta semper. Vivamus imperdiet enim a semper fringilla. Aenean quis lacinia lacus, et tincidunt elit. Quisque vitae elit hendrerit, blandit ex non, malesuada nibh. Mauris auctor maximus nibh eu dictum. Proin dapibus eros vel enim condimentum pulvinar. Mauris id faucibus velit. </h4></div>
+        </aside>
       </section>
       <footer class="footer">
-          <div class="pie-pagina">pie de pagina</div>
+        <div class="pie-pagina"><p>@ Japan Tourism</p></div>
       </footer>
     </div>
   </body>
