--- a/nivel2/index.html
+++ b/nivel2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercici 3 Version Movil</title>
+    <title>Ejercicio nivel 2</title>
     <link href="fontawesome-free-6.1.0-web/css/all.min.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap"
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <header class="header margen.interno">
         <div class="menuprincipal">
           <div class="logo">
             <a href="index.html"
@@ -43,7 +43,7 @@
           <h1>"Disfruta de la experiencia de otros viajeros"</h1>
         </div>
       </header>
-      <section class="section">
+      <section class="section margen.interno">
         <div class="articulos">
           <article class="article">
             <img src="../nivel2/images/sakura.jpg" />
@@ -63,13 +63,14 @@
               during the Renaissance. The first line of Lorem Ipsum, "Lorem
               ipsum dolor sit amet..", comes from a line in section 1.10.32.
             </p>
+            <a href="#">Leer mas...</a>
           </article>
           <article class="article">
             <img src="../nivel2/images/comida.jpg" />
             <h3>1 de mayo 2021</h3>
             <h2>Gastronomia</h2>
             <p>
-              t is a long established fact that a reader will be distracted by
+              It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout. The
               point of using Lorem Ipsum is that it has a more-or-less normal
               distribution of letters, as opposed to using 'Content here,
@@ -80,6 +81,7 @@
               have evolved over the years, sometimes by accident, sometimes on
               purpose (injected humour and the like).
             </p>
+            <a href="#">Leer mas...</a>
           </article>
           <article class="article">
             <img src="../nivel2/images/fuji.jpg" />
@@ -95,24 +97,27 @@
               Ipsum passages, and more recently with desktop publishing software
               like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
+            <a href="#">Leer mas...</a>
           </article>
           <article class="article">
             <img src="../nivel2/images/noche.jpg" />
             <h3>30 de marzo 2021</h3>
             <h2>Vida nocturna</h2>
             <p>
-              he standard chunk of Lorem Ipsum used since the 1500s is
+              The standard chunk of Lorem Ipsum used since the 1500s is
               reproduced below for those interested. Sections 1.10.32 and
               1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also
               reproduced in their exact original form, accompanied by English
               versions from the 1914 translation by H. Rackham.
-            </p>
+                          </p>
+                          <a href="#">Leer mas...</a>
           </article>
           <p class="navegacion">
             <p>Comes from sections 1.10.32 and 1.10.33 of "de Finibus
             Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
             written in 45 BC. This book is a treatise on the theory of ethics,
             very popular during the Renaissance.</p>
+            
           </nav>
         </div>
         <aside class="aside">
@@ -120,7 +125,7 @@
           <div class="texto-aside"><h4>Nullam tempor lorem sit amet quam porta semper. Vivamus imperdiet enim a semper fringilla. Aenean quis lacinia lacus, et tincidunt elit. Quisque vitae elit hendrerit, blandit ex non, malesuada nibh. Mauris auctor maximus nibh eu dictum. Proin dapibus eros vel enim condimentum pulvinar. Mauris id faucibus velit. </h4></div>
         </aside>
       </section>
-      <footer class="footer">
+      <footer class="footer margen.interno">
         <div class="pie-pagina"><p>@ Japan Tourism</p></div>
       </footer>
     </div>
