Nivel 2 semi terminado

--- a/nivel2/index.html
+++ b/nivel2/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="container">
-      <header class="header margen.interno">
-        <div class="menuprincipal">
+      <header class="header">
+        <div class="menuprincipal margen.interno">
           <div class="logo">
             <a href="index.html"
               ><img src="images/logo.png" alt="logo de la empresa"
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-        <div class="texto-principal">
+        <div class="texto-principal  margen.interno">
           <h1>"Disfruta de la experiencia de otros viajeros"</h1>
         </div>
       </header>
@@ -63,6 +63,7 @@
               during the Renaissance. The first line of Lorem Ipsum, "Lorem
               ipsum dolor sit amet..", comes from a line in section 1.10.32.
             </p>
+            <br>
             <a href="#">Leer mas...</a>
           </article>
           <article class="article">
@@ -81,6 +82,7 @@
               have evolved over the years, sometimes by accident, sometimes on
               purpose (injected humour and the like).
             </p>
+            <br>
             <a href="#">Leer mas...</a>
           </article>
           <article class="article">
@@ -97,7 +99,9 @@
               Ipsum passages, and more recently with desktop publishing software
               like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
+            <br>
             <a href="#">Leer mas...</a>
+          
           </article>
           <article class="article">
             <img src="../nivel2/images/noche.jpg" />
@@ -109,11 +113,13 @@
               1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also
               reproduced in their exact original form, accompanied by English
               versions from the 1914 translation by H. Rackham.
-                          </p>
-                          <a href="#">Leer mas...</a>
+            </p>
+              <br>
+              <a href="#">Leer mas...</a>
+            
           </article>
           <p class="navegacion">
-            <p>Comes from sections 1.10.32 and 1.10.33 of "de Finibus
+            Comes from sections 1.10.32 and 1.10.33 of "de Finibus
             Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
             written in 45 BC. This book is a treatise on the theory of ethics,
             very popular during the Renaissance.</p>
@@ -121,12 +127,12 @@
           </nav>
         </div>
         <aside class="aside">
-          <div class="texto-aside"><h4>Something</h4></div>
+          <div class="texto-aside"><h4><b>Something</b></h4></div>
           <div class="texto-aside"><h4>Nullam tempor lorem sit amet quam porta semper. Vivamus imperdiet enim a semper fringilla. Aenean quis lacinia lacus, et tincidunt elit. Quisque vitae elit hendrerit, blandit ex non, malesuada nibh. Mauris auctor maximus nibh eu dictum. Proin dapibus eros vel enim condimentum pulvinar. Mauris id faucibus velit. </h4></div>
         </aside>
       </section>
       <footer class="footer margen.interno">
-        <div class="pie-pagina"><p>@ Japan Tourism</p></div>
+        <div class="pie-pagina"><p>Japan Tourism</p></div>
       </footer>
     </div>
   </body>
