Se corrige imagen noche

--- a/nivel2/index.html
+++ b/nivel2/index.html
@@ -104,7 +104,7 @@
           
           </article>
           <article class="article">
-            <img src="../nivel2/images/noche.jpg" />
+            <img src="../nivel2/images/nocheb.jpg" />
             <h3>30 de marzo 2021</h3>
             <h2>Vida nocturna</h2>
             <p>
