Se agrega margin y  tansparencia header

--- a/nivel2/index.html
+++ b/nivel2/index.html
@@ -132,8 +132,10 @@
         </aside>
       </section>
       <footer class="footer margen.interno">
-        <div class="pie-pagina"><p>Japan Tourism</p></div>
+        <div class="pie-pagina"><p> © Japan Tourism</p></div>
       </footer>
+
+    
     </div>
   </body>
 </html>
