--- a/niveles2_3/index.html
+++ b/niveles2_3/index.html
@@ -71,16 +71,14 @@
             <h3>1 de mayo 2021</h3>
             <h2>Gastronomia</h2>
             <p>
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout. The
-              point of using Lorem Ipsum is that it has a more-or-less normal
-              distribution of letters, as opposed to using 'Content here,
-              content here', making it look like readable English. Many desktop
-              publishing packages and web page editors now use Lorem Ipsum as
-              their default model text, and a search for 'lorem ipsum' will
-              uncover many web sites still in their infancy. Various versions
-              have evolved over the years, sometimes by accident, sometimes on
-              purpose (injected humour and the like).
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Inventore reiciendis distinctio asperiores reprehenderit 
+              aut ratione voluptatum error quos, soluta, recusandae consequatur 
+              voluptatibus eius! Totam voluptas eligendi fuga, ut corporis qui?
+              Consequatur ab beatae, deleniti aperiam ratione nihil assumenda
+              error voluptatem, libero sequi placeat quaerat atque quam voluptatibus 
+              architecto neque magni quis optio minima reiciendis quidem id.
+              
             </p>
             <br>
             <a href="#">Leer mas...</a>
