FINAL PARA ENTREGAR

--- a/niveles2_3/index.html
+++ b/niveles2_3/index.html
@@ -46,7 +46,7 @@
       <section class="section margen.interno">
         <div class="articulos">
           <article class="article">
-            <img src="../nivel2/images/sakura.jpg" />
+            <img src="../niveles2_3/images/sakura.jpg" />
             <h3>3 de mayo 2021</h3>
             <h2>Cultura</h2>
             <p>
@@ -67,24 +67,26 @@
             <a href="#">Leer mas...</a>
           </article>
           <article class="article">
-            <img src="../nivel2/images/comida.jpg" />
+            <img src="../niveles2_3/images/comida.jpg" />
             <h3>1 de mayo 2021</h3>
             <h2>Gastronomia</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Inventore reiciendis distinctio asperiores reprehenderit 
-              aut ratione voluptatum error quos, soluta, recusandae consequatur 
-              voluptatibus eius! Totam voluptas eligendi fuga, ut corporis qui?
-              Consequatur ab beatae, deleniti aperiam ratione nihil assumenda
-              error voluptatem, libero sequi placeat quaerat atque quam voluptatibus 
-              architecto neque magni quis optio minima reiciendis quidem id.
-              
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout. The
+              point of using Lorem Ipsum is that it has a more-or-less normal
+              distribution of letters, as opposed to using 'Content here,
+              content here', making it look like readable English. Many desktop
+              publishing packages and web page editors now use Lorem Ipsum as
+              their default model text, and a search for 'lorem ipsum' will
+              uncover many web sites still in their infancy. Various versions
+              have evolved over the years, sometimes by accident, sometimes on
+              purpose (injected humour and the like).
             </p>
             <br>
             <a href="#">Leer mas...</a>
           </article>
           <article class="article">
-            <img src="../nivel2/images/fuji.jpg" />
+            <img src="../niveles2_3/images/fuji.jpg" />
             <h3>22 de abril 2021</h3>
             <h2>Turismo</h2>
             <p>
@@ -102,7 +104,7 @@
           
           </article>
           <article class="article">
-            <img src="../nivel2/images/nocheb.jpg" />
+            <img src="../niveles2_3/images/nocheb.jpg" />
             <h3>30 de marzo 2021</h3>
             <h2>Vida nocturna</h2>
             <p>
