--- a/nivel1/exercici1/index1200.html
+++ b/nivel1/exercici1/index1200.html
@@ -11,29 +11,29 @@
     <div class="container">
       <header class="header">
         <div class="menuprincipal">
-          <div class="logo">logo cabecera</div>
-          <div class="nav">nav cabecera</div>
-          <div class="social">social cabecera</div>
+          <div class="logo"></div>
+          <div class="nav"></div>
+          <div class="social"></div>
         </div>
         <div class="texto-principal">
-          <h1>Texto principal</h1>
+          <h1></h1>
         </div>
       </header>
       <section class="section">
           <div class="articulos">
-              <article class="article">Primer Articulo</article>
-              <article class="article">Segundo Articulo</article>
-              <article class="article">Tercer Articulo</article>
-              <article class="article">Cuarto Articulo</article>
-              <nav class="navegacion">navegacion paginas</nav>
+              <article class="article"></article>
+              <article class="article"></article>
+              <article class="article"></article>
+              <article class="article"></article>
+              <nav class="navegacion"></nav>
           </div>
           <aside class="aside">
-              <div class="texto-aside">texto costado 2</div>
-              <div class="texto-aside">texto costado 2</div>
+              <div class="texto-aside">   ñ  </div>
+              <div class="texto-aside">     </div>
           </aside>
       </section>
       <footer class="footer">
-          <div class="pie-pagina">pie de pagina</div>
+          <div class="pie-pagina"></div>
       </footer>
     </div>
   </body>
